Don't check for :before/:after on frames that have pseudo-style-contexts.  Bug 202917, r+sr=dbaron